# core

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.dev  README.md  SECURITY.md  VERSION  security-audit.txt  security-report.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/actions/setup-build-env/: action.yml
.github/workflows/: build-devcontainer.yml  ci.yml  nightly-fuzz.yml  performance.yml  pr-guard.yml  release.yml  slsa-provenance.yml
build-asan/: CTestTestfile.cmake  compile_commands.json
build-asan/tests/: CTestTestfile.cmake
build-asan/tools/: CTestTestfile.cmake
cmake/: CompilerFlags.cmake  EmbedBuildInfo.cmake  Sanitizers.cmake  StaticAnalysis.cmake  ThirdPartyDependencies.cmake  metagraphConfig.cmake.in
docker/: Dockerfile.buildenv  Dockerfile.clang18  Dockerfile.gcc15  Dockerfile.runtime  build-all.sh
docs/: 3rd-party.md  RELEASE.md  THREAT-MODEL.md  origin-2.md  origin-3.md  origin-4.md
docs/features/: F001-core-hypergraph-data-model.md  F001-core-metagraph-data-model.md  F002-binary-bundle-format.md  F003-memory-mapped-io-operations.md  F004-blake3-cryptographic-integrity.md  F005-graph-traversal-engine.md  F006-dependency-resolution-algorithm.md  F007-asset-id-and-addressing.md  F008-thread-safe-graph-access.md  F009-memory-pool-management.md  F010-platform-abstraction.md  F011-error-handling-validation.md  F012-bundle-creation-serialization.md  README.md
include/hyperdag/: hyperdag.h  result.h  version.h
include/metagraph/: result.h  version.h  version.h.in
scripts/: check-include-guards.sh  check-version-consistency.sh  cut-release.sh  mg.sh  prepare-release.sh  profile.sh  run-clang-format.sh  run-clang-tidy.sh  run-gitleaks.sh  run-quick-tests.sh  run-shellcheck.sh  security-audit.sh  setup-dev-env.sh  shlib.sh
scripts/ci/: guard-branch.sh  guard-version.sh  lint-commits.sh
scripts/git-hooks/: commit-msg  pre-commit  pre-push
scripts/lib/: directory_utils.sh  interactive_utils.sh  output_utils.sh  platform_utils.sh  tool_detection.sh
src/: CMakeLists.txt  error.c  version.c
src/core/: graph.c  node.c  version.c
src/internal/: common.h
src/platform/: linux.c  macos.c  platform.c  platform.h  windows.c
src/runtime/: executor.c
tests/: CMakeLists.txt  placeholder_test.c
tests/benchmarks/: CMakeLists.txt  bench_graph.c
tests/fuzz/: CMakeLists.txt  fuzz_graph.c  fuzz_node_ops.c
tests/integration/: CMakeLists.txt  test_integration.c
tests/unit/: CMakeLists.txt  test_graph.c  test_node.c  test_version.c
tools/: CMakeLists.txt  benchmark_tool.c  mg-cli.c  version_tool.c
tools/hyperdag-cli/: CMakeLists.txt  main.c
tools/hyperdag-inspect/: CMakeLists.txt  main.c
